[package]
name = "eos-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
gphoto2 = "3.2.3"
log = "0.4.21"
